--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -1,11 +1,11 @@
-<!-- Tela de Login -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
-  <title>Geri | Login</title>
-  <link rel="stylesheet" href="/css/style-login.css">
+  <title>Geri | Bem-vindo</title>
+  <link rel="stylesheet" href="/css/style-welcome.css">
 
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
@@ -17,19 +17,18 @@
   <div class="login-side">
     <main class="container">
       <div class="title">
-        <h1>TESTE</h1>
+        <h1>Geri</h1>
         <h2>Gestão financeira para universitários</h2>
       </div>
 
-      <div class="create-account">
-        <p>Novo(a) por aqui?</p>
-        <a href="/register">Criar conta</a>
-        <% if (error) { %>
-          <div class="error">
-            <%= error %>
-          </div>
-          <% } %>
+      <div class="welcome">
+        <h2>Bem-vindo(a)!</h2>
+        <p>A partir de agora suas finanças <br> nunca mais sairão do controle. <br> Basta preencher os dados em 5 <br>
+          minutos e acompanhar suas <br> metas! Vamos juntos?</p>
       </div>
+
+      <a href="/tutorial"><button>Continuar</button></a>
+
       <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">Feito por
         Anne Esther © MIT
         License 2025</a>
