--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -12,7 +12,7 @@
 
 <body>
   <div class="photo-side">
-    <img src="/assets/discutindo-o-diagrama-financeiro (1) 1.png" alt="" srcset="">
+    <img src="/assets/mulher-trabalhando-no-laptop-de-alto-angulo 1.png" alt="" srcset="">
   </div>
   <div class="login-side">
     <main class="container">
